tabs with minimal changes

--- a/acknowledge_license_cert.html
+++ b/acknowledge_license_cert.html
@@ -138,6 +138,8 @@ Z&H Healthcare Solutions, LLC.<br>
 Phone: +1 571 766 8074 FAX:+1 703 345 0512<br>
 Shameem C Hameed: sam@zhservices.com<br><br>
   
-
+Iconic font-face sourced from:
+<a href='http://somerandomdude.com/work/iconic/'>Iconic</a>
+<BR>
 </body>
 </html>
