--- a/copyright_notice.html
+++ b/copyright_notice.html
@@ -4,6 +4,10 @@
 <title>Copyright information</title> 
 </head> 
 <body> 
+Iconic font-face sourced from:
+<a href='http://somerandomdude.com/work/iconic/'>Iconic</a>
+<BR>
+
 All of this code has been released under the terms of the <a href="license.txt">GNU General Public License version 2 or higher (GPL)</a> a copy of which is included here for your convenience.<br><br>
 
 OpenEMR Project Website: <a href="http://www.open-emr.com/">www.open-emr.com</a><br><br>
